--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Kitae Kim"
+  name             : "kosate"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "개발하고 있는(사람이 되고픈), 데이터베이스 관리자"
   location         : "South Korea"
