set catetory feature.

--- a/_config.yml
+++ b/_config.yml
@@ -290,8 +290,7 @@ defaults:
       comments: true
       share: true
       related: true
-      sidebar:
-        nav: sidebar
+      sidebar_main: true
   # _pages
   - scope:
       path: "_pages"
