--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,11 @@
 # main links
 main:
-  #- title: "Quick-Start Guide"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "Home"
+    url: /index.html
+  #- title: "About"
+    #url: /about/
+  - title: "Category"
+    url: /categories/
   #  - title: "About"
   #   url: /_pages/about
   #  - title: "Posts"
