--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "버그대왕(bugdevil)"
+  name             : "버그대왕"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "시스템 엔지니어"
   location         : "Korea republic of"
