--- a/_config.yml
+++ b/_config.yml
@@ -103,14 +103,11 @@ analytics:
 # Site Author
 author:
   name             : "버그대왕"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/me.jpg"
   bio              : "시스템 엔지니어"
   location         : "Korea republic of"
-  email            : #kosate@gmail.com
+  email            : kosate@gmail.com
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:kosate@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -215,8 +212,8 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+permalink: /blog/:categories/:title/
+paginate: 10 # amount of posts to show
 paginate_path: /page:num/
 timezone: #"Asia/Seoul" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -293,7 +290,7 @@ defaults:
       comments: true
       share: true
       related: true
-      sidebar_main: true 
+      sidebar_main: true  
   # _pages
   - scope:
       path: "_pages"
