update naver search advisor

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "7d87efbaf8b183e7c68ebfdf141d269624b48ea6"
 yandex_site_verification :
 baidu_site_verification  :
 
