--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "기억을 글로 남기기 "
 title_separator          : "|"
 subtitle                 : "우리의 삶은 틈새로 가득차 있다."
 name                     : "kosate"
-description              : "기억을 글로 남기기"
+description              : "새로운 IT기술이나 기억들을 정리했습니다."
 url                      : "https://kosate.github.io"
 baseurl                  : #"/blog"
 repository               : "kosate/kosate.githubt.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
