--- a/_config.yml
+++ b/_config.yml
@@ -217,6 +217,12 @@ paginate: 12 # amount of posts to show
 paginate_path: /page:num/
 timezone: #Asia/Seoul # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
+# Collection
+collections:
+  book:
+    output: true
+    permalink: /:collection/:path/
+
 # google Chars
 head_scripts:
 - "https://www.gstatic.com/charts/loader.js"
@@ -298,3 +304,12 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _book
+  - scope:
+      path: ""
+      type: book
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
