--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "Home"
     url: /index.html
-  #- title: "About"
-    #url: /about/
+  - title: "Book"
+    url: /book/
   - title: "Category"
     url: /categories/
   #  - title: "About"
