--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dirt" # "default",  "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "contrast" # "default",  "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "eu-KR"
+locale                   : "ko-KR"
 title                    : "기억을 글로 남기기 "
 title_separator          : " - "
 subtitle                 : "우리의 삶은 틈새로 가득차 있다. (The more we share the more we have)"
@@ -296,7 +296,7 @@ defaults:
       comments: true
       share: true
       related: true
-      sidebar_main: true  
+      sidebar_main: true
   # _pages
   - scope:
       path: "_pages"
